# valuebrief

./: .env-example  .gitignore  LICENSE  Makefile  README.md  example-portfolio.json  exchange_mappings.json  pyproject.toml  pyrightconfig.json
.deepagents/skills/citation-quality/: SKILL.md
.deepagents/skills/earnings-transcripts/: SKILL.md
.deepagents/skills/sec-filings/: SKILL.md
.deepagents/skills/value-investing-research/: SKILL.md
scripts/: 01-investment_memories_ddl.sql  02-thesis_drifts_ddl.sql  03-investment_pillars_ddl.sql  04-sec_company_tickers_ddl.sql  init-ddl.sql
src/: config.py  db.py  logger.py  main.py  models.py  provider.py  report_writer.py
src/agents/: analysts.py  curator.py  judge.py  langgraph_example.py  orchestration.py  report_generator.py  states.py  supervisor.py
src/schemas/: __init__.py  base.py  deprecated.py  finance.py  maintenance.py  provider.py  rag.py  routing.py  valuation.py  workflow.py
src/utils/: checkpoint_helpers.py  citations.py  config.py  db.py  db_outbox.py  deduplication.py  deepseek_thinking.py  drift_tracker.py  embeddings.py  logger.py  report_writer.py  research_persistence.py  vault.py  vector_memory.py
tests/: exchange_mapping.py  test_curator.py  test_db.py  test_db_outbox.py  test_provider_sources.py  test_rag_retrieval.py  test_report_generator.py  test_research_analyst.py  test_research_persistence.py  test_research_workflow_routing.py  test_schemas.py  test_supervisor_research_tasks.py  test_ticker_validation.py  test_vault.py
